@@ -7,7 +7,7 @@ static char* stringlist004[] = { "baseq2", NULL };
 static char* stringlist005[] = { "quake2", NULL };
 static char* stringlist006[] = { "baseq3", "demoq3", NULL };
 static char* stringlist007[] = { "q3", "quake3", NULL };
-static char* stringlist008[] = { "main", "demomain", NULL };
+static char* stringlist008[] = { "wolfmp", "main", "demomain", NULL };
 static char* stringlist009[] = { "wolf", NULL };
 static char* stringlist010[] = { "etmain", NULL };
 static char* stringlist011[] = { "et", NULL };
